--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personalportfolio",
+  "name": "my-cv",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://dovansy.github.io/my-cv/",
